--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,13 +16,16 @@ spec:
         - name: dead-link-detection
           image: tombailey256/dead-link-detection:0.1.0 #you may want to use a different tag for your app
           env:
-            - name: PORT
+            - name: REST_PORT
               value: "8080"
+            - name: GRPC_PORT
+              value: "8081"
           resources:
             requests:
               memory: "512Mi"
           ports:
             - containerPort: 8080
+            - containerPort: 8081
 ---
 apiVersion: v1
 kind: Service
@@ -36,3 +39,7 @@ spec:
       port: 8080
       protocol: TCP
       targetPort: 8080
+    - name: grpc
+      port: 8081
+      protocol: TCP
+      targetPort: 8081
