--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/tombailey/dead-link-detection#readme",
   "dependencies": {
+    "@grpc/proto-loader": "^0.5.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "grpc": "^1.24.6",
     "puppeteer": "^7.1.0",
     "uuid": "^8.3.2",
     "validator": "^13.5.2"
