--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Docker Hub release
 
 on:
   push:
@@ -15,12 +15,16 @@ jobs:
     - name: Extract version
       id: extract_version
       uses: Saionaro/extract-package-version@v1.0.6
-    - name: Login for registry
-      run: echo "$DOCKER_HUB_ACCESS_TOKEN" | docker login -u tombailey256 --password-stdin
-      env:
-        DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag tombailey256/dead-link-detection:${{ steps.extract_version.outputs.version }}
-    - name: Push the docker image
-      run: docker push tombailey256/dead-link-detection:${{ steps.extract_version.outputs.version }}
-      
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Docker login
+      uses: docker/login-action@v1
+      with:
+        username: tombailey256
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+    - name: Build and push the Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: tombailey256/dead-link-detection:${{ steps.extract_version.outputs.version }}
